--- a/edgetech/index.html
+++ b/edgetech/index.html
@@ -3,9 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EdgeTech</title>
+
+    <!-- == META OG Social Media Ads == -->
+    <meta property="og:title" content="Chebon Kibet" />
+    <meta property="og:url" content="https://chebonk.web.app" />
+    <meta property="og:image" content="https://chebonk.web.app/css/img/Facebook.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:desc revealription" content="Transforming Your Ideas To Reality" />
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@chebon_kibet">
+    <meta name="twitter:title" content="Chebon Kibet">
+    <meta name="twitter:desc revealription" content="Transforming Your Ideas To Reality">
+    <meta name="twitter:image" content="https://chebonk.web.app/css/img/Twitter.png">
+    <meta name="twitter:player" content="https://chebonk.web.app">
+    <meta name="twitter:player:width" content="280">
+    <meta name="twitter:player:height" content="150">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
+    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="favicon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#2b5797">
+    <meta name="msapplication-config" content="favicon/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+
+    <!-- == Style Sheet == -->
+    <link rel="stylesheet" href="css/style.css">
+
+    <!-- == Fonts == -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;800&display=swap"
+        rel="stylesheet">
+
+    <!-- == Icons == -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        crossorigin="anonymous" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
-    
+    <!-- == Heading == -->
+        <nav>
+            <div class="container nav-container">
+                <div class="logo">
+                    <img src="css/img/edgetech logo.png" alt="edgetech logo">
+                </div>
+                <div class="nav-links">
+                    <a href="#">SERVICES</a>
+                    <a href="#">OUR STORY</a>
+                    <a href="#">PARTNERS</a>
+                    <a href="#">CONTACTS</a>
+                </div>
+            </div>
+        </nav>
+    <!-- == || Heading == -->
+    <!-- ==  == -->
+    <!-- ==  == -->
+    <!-- ==  == -->
+    <!-- == Scripts == -->
+    <script src="js/scripts.js"></script>
 </body>
 </html>
