--- a/edgetech/index.html
+++ b/edgetech/index.html
@@ -6,29 +6,29 @@
     <title>EdgeTech</title>
 
     <!-- == META OG Social Media Ads == -->
-    <meta property="og:title" content="Chebon Kibet" />
-    <meta property="og:url" content="https://chebonk.web.app" />
-    <meta property="og:image" content="https://chebonk.web.app/css/img/Facebook.png" />
+    <meta property="og:title" content="EdgeTech" />
+    <meta property="og:url" content="https://edgetech-consults-ltd.web.app/" />
+    <meta property="og:image" content="https://edgetech-consults-ltd.web.app//css/img/Facebook.png" />
     <meta property="og:type" content="website" />
     <meta property="og:desc revealription" content="Transforming Your Ideas To Reality" />
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@chebon_kibet">
-    <meta name="twitter:title" content="Chebon Kibet">
+    <meta name="twitter:site" content="@edgetech">
+    <meta name="twitter:title" content="EdgeTech">
     <meta name="twitter:desc revealription" content="Transforming Your Ideas To Reality">
-    <meta name="twitter:image" content="https://chebonk.web.app/css/img/Twitter.png">
-    <meta name="twitter:player" content="https://chebonk.web.app">
+    <meta name="twitter:image" content="https://edgetech-consults-ltd.web.app//css/img/Twitter.png">
+    <meta name="twitter:player" content="https://edgetech-consults-ltd.web.app/">
     <meta name="twitter:player:width" content="280">
     <meta name="twitter:player:height" content="150">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-    <link rel="manifest" href="favicon/site.webmanifest">
-    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="favicon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="css/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="css/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="css/favicon/favicon-16x16.png">
+    <link rel="manifest" href="css/favicon/site.webmanifest">
+    <link rel="mask-icon" href="css/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="css/favicon/favicon.ico">
     <meta name="msapplication-TileColor" content="#2b5797">
-    <meta name="msapplication-config" content="favicon/browserconfig.xml">
+    <meta name="msapplication-config" content="css/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
 
     <!-- == Style Sheet == -->
@@ -37,8 +37,7 @@
     <!-- == Fonts == -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <!-- == Icons == -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
@@ -62,9 +61,349 @@
             </div>
         </nav>
     <!-- == || Heading == -->
-    <!-- ==  == -->
-    <!-- ==  == -->
-    <!-- ==  == -->
+    <!-- == Main == -->
+        <main>
+            <!-- == Banner == -->
+                <section class="banner">
+                    <div class="banner-container container">
+                        <h1>All you need to redefine business</h1>
+                        <p>From Mobile Applications and Integration,
+                            Software and Systems Development to On-point Technical Support.
+                            EdgeTech is the all-in-one place to build beautiful solutions.</p>
+                        <img src="css/img/person.png" alt="edgetech">
+                    </div>
+                    <div class="drop-arrow-scroll">
+                        <div class="icon">
+
+                        </div>
+                    </div>
+                </section>
+            <!-- == || Banner == -->
+            <section class="our-story">
+                <div class="our-stry-container container">
+                    <h1>The future of Tech</h1>
+                    <p>It's all about the experience. People love Apps that are fun and simple to use.
+                        We make those apps. Our apps are made from scratch using nothing but the
+                        best strategy, design and technical ingredients.</p>
+                    <img src="css/img/info section.png" alt="edgetech">
+                </div>
+            </section>
+            <section class="cards">
+                <div class="cards-container container">
+                    <div class="card">
+                        <img src="" alt="">
+                        <div class="card-info">
+                            <h3></h3>
+                            <p></p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="" alt="">
+                        <div class="card-info">
+                            <h3></h3>
+                            <p></p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="" alt="">
+                        <div class="card-info">
+                            <h3></h3>
+                            <p></p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="" alt="">
+                        <div class="card-info">
+                            <h3></h3>
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="breath">
+                <div class="breath-container container">
+                    <h1>We eat, breath...</h1>
+                    <div class="breath-cards">
+                        <div class="breath-card">
+                            <div class="icon">
+
+                            </div>
+                            <div class="breath-card-info">
+                                <h2></h2>
+                                <p></p>
+                            </div>
+                        </div>
+                        <div class="breath-card">
+                            <div class="icon">
+
+                            </div>
+                            <div class="breath-card-info">
+                                <h2></h2>
+                                <p></p>
+                            </div>
+                        </div>
+                        <div class="breath-card">
+                            <div class="icon">
+
+                            </div>
+                            <div class="breath-card-info">
+                                <h2></h2>
+                                <p></p>
+                            </div>
+                        </div>
+                        <div class="breath-card">
+                            <div class="icon">
+
+                            </div>
+                            <div class="breath-card-info">
+                                <h2></h2>
+                                <p></p>
+                            </div>
+                        </div>
+                        <div class="breath-card">
+                            <div class="icon">
+
+                            </div>
+                            <div class="breath-card-info">
+                                <h2></h2>
+                                <p></p>
+                            </div>
+                        </div>
+                        <div class="breath-card">
+                            <div class="icon">
+
+                            </div>
+                            <div class="breath-card-info">
+                                <h2></h2>
+                                <p></p>
+                            </div>
+                        </div>
+                        <div class="breath-card">
+                            <div class="icon">
+
+                            </div>
+                            <div class="breath-card-info">
+                                <h2></h2>
+                                <p></p>
+                            </div>
+                        </div>
+                        <div class="breath-card">
+                            <div class="icon">
+
+                            </div>
+                            <div class="breath-card-info">
+                                <h2></h2>
+                                <p></p>
+                            </div>
+                        </div>
+                        <div class="breath-card">
+                            <div class="icon">
+
+                            </div>
+                            <div class="breath-card-info">
+                                <h2></h2>
+                                <p></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="musketeers">
+                <div class="musketeers-container container">
+                    <h1>Our Story</h1>
+                    <p>Formed in Kenya in 2004, EdgeTech Consult has gone from strength to strength since
+                        opening our Nairobi studio, continuing to deliver premium Mobile Applications and
+                        Integration, Software and Systems Development and On-point Technical Support solutions.
+                        With a ton of successful new media pro jects under our belt, we've turned our experience
+                        designing and developing websites and applications to the art of crafting unique and
+                        exciting user experiences within the mobile space. This means we're able to take an
+                        integrated approach to creating innovative applications to enhance your business and brand,
+                        looking at the wider picture beyond just apps. If you're after a mobile strategy to revolutionize
+                        your business, optimise your website for mobile devices, or something else bold and brave,
+                        we’re your guys. We're not just designers - we're innovators, too. We understand that
+                        businesses need quality, well planned IT systems to prevent downtimes, bottlenecks and
+                        continued service delivery. We develop, integrate, manage and support reliable and long
+                        term IT Solutions and Systems which limit day to day break downs and expenses.</p>
+                        <img src="css/img/" alt="edgetech">
+                </div>
+                <h1>The Musketeers</h1>
+                <p>We are a close-knit team full of humor, coffee & lunch is served in the ofﬁce (free of
+                    charge!!, Daisy knows this). We pack the punch of the big boys and girls, with service and
+                    attention you only get from a small studio. Our ofﬁces sit in a very serene compound full
+                    of trees and perfectly manicured lawn.</p>
+                <div class="musketeers-cards">
+                    <div class="musketeers-card">
+                        <div class="image">
+                            <img src="" alt="">
+                        </div>
+                        <div class="musketeer-card-info">
+                            <h3></h3>
+                            <span></span>
+                            <p></p>
+                        </div>
+                    </div>
+                    <div class="musketeers-card">
+                        <div class="image">
+                            <img src="" alt="">
+                        </div>
+                        <div class="musketeer-card-info">
+                            <h3></h3>
+                            <span></span>
+                            <p></p>
+                        </div>
+                    </div>
+                    <div class="musketeers-card">
+                        <div class="image">
+                            <img src="" alt="">
+                        </div>
+                        <div class="musketeer-card-info">
+                            <h3></h3>
+                            <span></span>
+                            <p></p>
+                        </div>
+                    </div>
+                    <div class="musketeers-card">
+                        <div class="image">
+                            <img src="" alt="">
+                        </div>
+                        <div class="musketeer-card-info">
+                            <h3></h3>
+                            <span></span>
+                            <p></p>
+                        </div>
+                    </div>
+                    <div class="musketeers-card">
+                        <div class="image">
+                            <img src="" alt="">
+                        </div>
+                        <div class="musketeer-card-info">
+                            <h3></h3>
+                            <span></span>
+                            <p></p>
+                        </div>
+                    </div>
+                    <div class="musketeers-card">
+                        <div class="image">
+                            <img src="" alt="">
+                        </div>
+                        <div class="musketeer-card-info">
+                            <h3></h3>
+                            <span></span>
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="partners">
+                <div class="partners-container container">
+                    <h1></h1>
+                    <p></p>
+                    <div class="partners">
+                        <div class="partner">
+                            <img src="" alt="">
+                        </div>
+                        <div class="partner">
+                            <img src="" alt="">
+                        </div>
+                        <div class="partner">
+                            <img src="" alt="">
+                        </div>
+                        <div class="partner">
+                            <img src="" alt="">
+                        </div>
+                        <div class="partner">
+                            <img src="" alt="">
+                        </div>
+                        <div class="partner">
+                            <img src="" alt="">
+                        </div>
+                        <div class="partner">
+                            <img src="" alt="">
+                        </div>
+                        <div class="partner">
+                            <img src="" alt="">
+                        </div>
+                        <div class="partner">
+                            <img src="" alt="">
+                        </div>
+                        <div class="partner">
+                            <img src="" alt="">
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
+    <!-- == || Main == -->
+    <!-- == Footer == -->
+        <footer>
+            <div class="footer-container container">
+                <div class="top-foot">
+                    <div class="social-media">
+                        <span>FOLLOW US</span>
+                        <div class="social-icons">
+                            <a href="#"><i class="fas fa-twitter"></i></a>
+                            <a href="#"><i class="fas fa-twitter"></i></a>
+                            <a href="#"><i class="fas fa-twitter"></i></a>
+                            <a href="#"><i class="fas fa-twitter"></i></a>
+                        </div>
+                    </div>
+                    <form class="top-foot-fm" action="">
+                        <div class="icon"></div>
+                        <input type="text">
+                        <button type="submit">Go</button>
+                    </form>
+                </div>
+                <div class="middle-foot">
+                    <h1>Want to her more</h1>
+                    <p>We love to chat anytime of the day and "night".
+                        Let’s link up to redeﬁne the internet of things, transform the way your business
+                        connects with technology and interacts with your customer.</p>
+                </div>
+                <div class="bottom-foot">
+                    <div class="column one">
+                        <h3>Our Business Ofﬁce</h3>
+                        <ul>
+                            <li>
+                                <div class="icon"></div>
+                                <div class="text"></div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="column two">
+                        <h3>Our Business Ofﬁce</h3>
+                        <ul>
+                            <li>
+                                <div class="icon"></div>
+                                <div class="text"></div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="column three">
+                        <form action="">
+                            <input type="text">
+                            <input type="text">
+                            <textarea name="" id="" cols="30" rows="10"></textarea>
+                            <button type="submit">SEND</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-copyright container">
+                <div class="ft-logo">
+                    <img src="css/img/edgetech footer logo.png" alt="edgetech">
+                    <div class="ft-links">
+                        <a href="#">Site Map</a>
+                        <a href="#">Careers</a>
+                        <a href="#">Privacy</a>
+                        <a href="#">Terms of use</a>
+                    </div>
+                </div>
+                <div class="copy-text">
+                    ©2004-2018 EdgeTech Consult. All rights reserved
+                </div>
+            </div>
+        </footer>
+    <!-- == || Footer == -->
     <!-- == Scripts == -->
     <script src="js/scripts.js"></script>
 </body>
