--- a/edgetech/index.html
+++ b/edgetech/index.html
@@ -67,8 +67,8 @@
                 <section class="banner">
                     <div class="banner-container container">
                         <h1>All you need to redefine business</h1>
-                        <p>From Mobile Applications and Integration,
-                            Software and Systems Development to On-point Technical Support.
+                        <p>From Mobile Applications and Integration, <br>
+                            Software and Systems Development to On-point Technical Support. <br>
                             EdgeTech is the all-in-one place to build beautiful solutions.</p>
                         <img src="css/img/person.png" alt="edgetech">
                     </div>
@@ -91,31 +91,49 @@
             <section class="cards">
                 <div class="cards-container container">
                     <div class="card">
-                        <img src="" alt="">
+                        <img src="css/img/web and mobile.jpg" alt="edgetech">
                         <div class="card-info">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Web & Mobile
+                                Development</h3>
+                            <p>That Website which
+                                brings out your brand.
+                                Get a mobile app into
+                                everyones pocket.</p>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="" alt="">
+                        <img src="css/img/system development.jpg" alt="edgetech">
                         <div class="card-info">
-                            <h3></h3>
-                            <p></p>
+                            <h3>System Development
+                                & Integration</h3>
+                            <p>Automate your
+                                processes easily,
+                                integrate to new and
+                                existing systems and
+                                platforms.</p>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="" alt="">
+                        <img src="css/img/seated lady.jpg" alt="edgetech">
                         <div class="card-info">
-                            <h3></h3>
-                            <p></p>
+                            <h3>ICT Consultancy &
+                                Project Management</h3>
+                            <p>We provide consultancy
+                                that works, quick, sharp
+                                and on point to
+                                implementation.</p>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="" alt="">
+                        <img src="css/img/laptop.jpg" alt="edgetech">
                         <div class="card-info">
-                            <h3></h3>
-                            <p></p>
+                            <h3>Above all..We are
+                                Linux!!</h3>
+                            <p>Our Servers are all
+                                Linux, We build on
+                                OpenSource alot, we
+                                like sudo, security,
+                                tuning.</p>
                         </div>
                     </div>
                 </div>
@@ -129,8 +147,10 @@
 
                             </div>
                             <div class="breath-card-info">
-                                <h2></h2>
-                                <p></p>
+                                <h2>Responsive Web Design</h2>
+                                <p>We transform static websites to
+                                    fully dynamic, responsive and SEO
+                                    optimized.</p>
                             </div>
                         </div>
                         <div class="breath-card">
@@ -138,8 +158,10 @@
 
                             </div>
                             <div class="breath-card-info">
-                                <h2></h2>
-                                <p></p>
+                                <h2>Mobile Money Integrations</h2>
+                                <p>For M-Pesa integrations? Yes we
+                                    know and do it well B2C, C2B and
+                                    Checkout Integrations.</p>
                             </div>
                         </div>
                         <div class="breath-card">
@@ -147,8 +169,10 @@
 
                             </div>
                             <div class="breath-card-info">
-                                <h2></h2>
-                                <p></p>
+                                <h2>Technical Support</h2>
+                                <p>We make sure you work without
+                                    worries, Offsite and Onsite Support
+                                    for Systems and Platforms.</p>
                             </div>
                         </div>
                         <div class="breath-card">
@@ -156,8 +180,10 @@
 
                             </div>
                             <div class="breath-card-info">
-                                <h2></h2>
-                                <p></p>
+                                <h2>Enteprise Systems</h2>
+                                <p>Customizations, Integrations of
+                                    Enteprise Grade Systems and
+                                    Processes automations.</p>
                             </div>
                         </div>
                         <div class="breath-card">
@@ -165,8 +191,11 @@
 
                             </div>
                             <div class="breath-card-info">
-                                <h2></h2>
-                                <p></p>
+                                <h2>iOS, Windows Mobile & Android</h2>
+                                <p>From Retail, Value Chain
+                                    Management and Data Collection
+                                    Applications, we craft the best
+                                    mobile applications.</p>
                             </div>
                         </div>
                         <div class="breath-card">
@@ -174,8 +203,12 @@
 
                             </div>
                             <div class="breath-card-info">
-                                <h2></h2>
-                                <p></p>
+                                <h2>IT Project Managment
+                                    and Monitoring</h2>
+                                <p>We provide step by step Analysis,
+                                    Design, Development and
+                                    Implementation strategies to ensure
+                                    a successful project.</p>
                             </div>
                         </div>
                         <div class="breath-card">
@@ -183,8 +216,10 @@
 
                             </div>
                             <div class="breath-card-info">
-                                <h2></h2>
-                                <p></p>
+                                <h2>SMS, USSD & IVR</h2>
+                                <p>We handle 4 Value Additions
+                                    service providers on a daily basis.
+                                    We develop for them.</p>
                             </div>
                         </div>
                         <div class="breath-card">
@@ -192,8 +227,10 @@
 
                             </div>
                             <div class="breath-card-info">
-                                <h2></h2>
-                                <p></p>
+                                <h2>Languages?</h2>
+                                <p>Perl, PHP, Python, and Ruby all
+                                    connecting to SqlLite, MySQL,
+                                    PostgreSQL, MSSQL and Oracle.</p>
                             </div>
                         </div>
                         <div class="breath-card">
@@ -201,8 +238,10 @@
 
                             </div>
                             <div class="breath-card-info">
-                                <h2></h2>
-                                <p></p>
+                                <h2>Frameworks?</h2>
+                                <p>Laravel, Slim, Mojo, Ruby on Rails,
+                                    CodeIgnite, Ionic, Bootstrap,CSS and
+                                    jQuery for perfect and</p>
                             </div>
                         </div>
                     </div>
